--- a/templates/individual_cupcake.html
+++ b/templates/individual_cupcake.html
@@ -19,11 +19,11 @@
             <a href="{{ url_for("individual_cupcake", name=cupcake["name"]) }}">
                 <h3>{{ cupcake["name"] }}</h3>
             </a>
-            <h4>Flavor: {{ cupcake["flavor"] }}</h4>
-            <h4>Frosting: {{ cupcake["frosting"] }}</h4>
-            <h4>Price: ${{ cupcake["price"] }}</h4>
+            <h8>Flavor: {{ cupcake["flavor"] }}</h8>
+            <h8>Frosting: {{ cupcake["frosting"] }}</h8>
+            <h8>Price: ${{ cupcake["price"] }}</h8>
             <a href="{{ url_for("individual_cupcake", name=cupcake["name"]) }}">    
-                <button>Add to team</button>
+                <button class="button">Add to team</button>
             </a>
         </div>
         
